workload/apps/adguard-home-kustomize/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
      app.kubernetes.io/name: adguard
  template:
    metadata:
      labels:
        app: adguard
        app.kubernetes.io/name: adguard
    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: http-initial
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: adguard-data
              mountPath: /opt/adguardhome/work
              subPath: work
            - name: adguard-data
              mountPath: /opt/adguardhome/conf/
              subPath: conf
      volumes:
        - name: adguard-data
          persistentVolumeClaim:
            claimName: adguard-pvc
