workload/apps/adguard-home-kustomize/manifests/service-dns-tcp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns-tcp
  namespace: adguard
spec:
  selector:
    app.kubernetes.io/name: adguard
  ports:
    - protocol: TCP
      port: 53
      targetPort: dns-tcp
      name: dns-tcp
  type: LoadBalancer
  externalTrafficPolicy: Local
